[project]
name = "cybersyn"
version = "0.1.0"
description = "Study tracker and timer with analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
cybersyn = "cli:app"
